crates/parser/tests/snapshots/test_expression__new_instance_nested.snap
---
source: crates/parser/tests/test_expression.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: "test",
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        body: [
                            NewInstance(
                                NewInstanceExpr {
                                    class: PackageableElementPtr {
                                        package: None,
                                        name: "goes2",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 5,
                                            end_line: 4,
                                            end_column: 5,
                                        },
                                    },
                                    assignments: [
                                        KeyValuePair {
                                            key: "v2",
                                            value: NewInstance(
                                                NewInstanceExpr {
                                                    class: PackageableElementPtr {
                                                        package: None,
                                                        name: "goes",
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 15,
                                                            end_line: 4,
                                                            end_column: 15,
                                                        },
                                                    },
                                                    assignments: [
                                                        KeyValuePair {
                                                            key: "v",
                                                            value: Literal(
                                                                String(
                                                                    StringLiteral {
                                                                        value: "value",
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 4,
                                                                            start_column: 23,
                                                                            end_line: 4,
                                                                            end_column: 29,
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 21,
                                                                end_line: 4,
                                                                end_column: 21,
                                                            },
                                                        },
                                                    ],
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 4,
                                                        start_column: 15,
                                                        end_line: 4,
                                                        end_column: 15,
                                                    },
                                                },
                                            ),
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 12,
                                                end_line: 4,
                                                end_column: 13,
                                            },
                                        },
                                    ],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
